--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,71 +7,63 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from FastaiV2Course.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# FastaiV2Course 2020\n",
     "\n",
-    "> Summary description here."
+    "> Various projects following machine learning and deep learning courses. Mostly centered around fastai and python with a few introductions to swift, tensorflow and vanilla pytorch."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "## Install\n",
+    "\n",
+    "There is no need to install this as a library, instead clone the repo and install the dependencies to follow along. Conda is recommended but not necessary, if you like you can just install the dependencies in environment.yml using pip.\n",
+    "\n",
+    "    git clone https://github.com/hoftherose/FastaiV2Course.git\n",
+    "    cd FastaiV2Course\n",
+    "    conda env create -f environment.yml"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install"
+    "## How to use\n",
+    "\n",
+    "This is made to be a course overview using the newer deep learning tools found in pytorch v1, tensorflow v2, fastaiv2 and swift for tensorflow. This is not a tutorial for deep learning, but could be used as such. If you want to follow along with the examples presented here you it would be best to do so with the courses. Links to the corresponding course will be below.\n",
+    "\n",
+    "If you are looking for more machine/deep learning projects other than the ones found in these courses checkout the [following repo](https://github.com/hoftherose/ML_DL_Projects)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "# Table of Contents\n",
+    "1. [Fastai Deep Learning Coursev3 Lesson 1 (Image Classification)](https://course.fast.ai/videos/?lesson=1): Notebook found [here](https://github.com/hoftherose/FastaiV2Course/tree/master/nbs/00_ImageClassification)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use"
+    "# Acknowledgements"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
+    "## Documentation\n",
+    "This project was documented thanks to fastai's [nbdev library](https://github.com/fastai/nbdev). Great thanks to the fastai team for this tool and for the wonderful work making ai uncool. If you want to find out how to create similar repos that revolve around jupyter notebook check out the [link](https://nbdev.fast.ai/)."
    ]
   },
   {
