Lesson1 Link Fix

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "source": [
     "# Table of Contents\n",
-    "1. [Fastai Deep Learning Coursev3 Lesson 1 (Image Classification)](https://course.fast.ai/videos/?lesson=1): Notebook found [here](https://github.com/hoftherose/FastaiV2Course/tree/master/nbs/00_ImageClassification)"
+    "1. [Fastai Deep Learning Coursev3 Lesson 1 (Image Classification)](https://course.fast.ai/videos/?lesson=1): Notebook found [here](https://github.com/hoftherose/FastaiV2Course/tree/master/nbs/00_ImageClassification.ipynb)"
    ]
   },
   {
