--- a/nbs/00_PracticalDeepLearning2019.Lesson1.ipynb
+++ b/nbs/00_PracticalDeepLearning2019.Lesson1.ipynb
@@ -25,8 +25,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image Classification using Fastaiv2\n",
-    "> Notes following the first lesson of the fastai 2019 Deep Learning for Practitioners Course. Code follows the lesson using fastaiv2, fastcore and is documented using the nbdev library."
+    "# Lesson 1\n",
+    "> Image Classification using Fastaiv2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes following the first lesson of the fastai 2019 Deep Learning for Practitioners Course. Code follows the lesson using fastaiv2, fastcore and is documented using the nbdev library."
    ]
   },
   {
