Show_doc work around

--- a/nbs/00_PracticalDeepLearning2019.Lesson1.ipynb
+++ b/nbs/00_PracticalDeepLearning2019.Lesson1.ipynb
@@ -84,8 +84,8 @@
     }
    ],
    "source": [
-    "#hide\n",
-    "show_doc(untar_data)"
+    "#show\n",
+    "#show_doc(untar_data)"
    ]
   },
   {
@@ -150,10 +150,10 @@
     }
    ],
    "source": [
-    "#hide\n",
-    "show_doc(URLs)\n",
-    "show_doc(URLs.PETS)\n",
-    "print(URLs.PETS)"
+    "#show\n",
+    "#show_doc(URLs)\n",
+    "#show_doc(URLs.PETS)\n",
+    "#print(URLs.PETS)"
    ]
   },
   {
@@ -213,9 +213,9 @@
     }
    ],
    "source": [
-    "#hide\n",
-    "show_doc(path.ls)\n",
-    "path.ls()"
+    "#show\n",
+    "#show_doc(path.ls)\n",
+    "#path.ls()"
    ]
   },
   {
@@ -275,9 +275,9 @@
     }
    ],
    "source": [
-    "#hide\n",
-    "show_doc(get_files)\n",
-    "show_doc(get_image_files)"
+    "#show\n",
+    "#show_doc(get_files)\n",
+    "#show_doc(get_image_files)"
    ]
   },
   {
@@ -421,11 +421,11 @@
     }
    ],
    "source": [
-    "#hide\n",
-    "show_doc(RandomSplitter)\n",
-    "show_doc(Resize)\n",
-    "show_doc(aug_transforms)\n",
-    "show_doc(RegexLabeller)"
+    "#show\n",
+    "#show_doc(RandomSplitter)\n",
+    "#show_doc(Resize)\n",
+    "#show_doc(aug_transforms)\n",
+    "#show_doc(RegexLabeller)"
    ]
   },
   {
