Remove Phantom Outputs

--- a/nbs/00_PracticalDeepLearning2019.Lesson1.ipynb
+++ b/nbs/00_PracticalDeepLearning2019.Lesson1.ipynb
@@ -26,9 +26,23 @@
    "metadata": {},
    "source": [
     "# Lesson 1\n",
-    "> Image Classification using Fastaiv2\n",
+    "> Image Classification using Fastaiv2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes following the first lesson of the fastai 2019 Deep Learning for Practitioners Course. Code follows the lesson using fastaiv2, fastcore and is documented using the nbdev library.\n",
     "\n",
-    "Notes following the first lesson of the fastai 2019 Deep Learning for Practitioners Course. Code follows the lesson using fastaiv2, fastcore and is documented using the nbdev library."
+    "To start make sure you can import the fastai2 library and nbdev."
    ]
   },
   {
@@ -37,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exports\n",
+    "#export\n",
     "from fastai2.data.all import *\n",
     "from fastai2.vision.all import *\n",
     "from nbdev.showdoc import *"
@@ -449,6 +463,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exports\n",
+    "dls = dblock.dataloaders(path_img, bs=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -464,9 +488,6 @@
     }
    ],
    "source": [
-    "#exports\n",
-    "dls = dblock.dataloaders(path_img, bs=4)\n",
-    "\n",
     "dls.show_batch()"
    ]
   },
@@ -508,7 +529,6 @@
     }
    ],
    "source": [
-    "#exports\n",
     "import torch\n",
     "print(torch.cuda.is_available())"
    ]
